fix: align tutorial dismissal reminder flow

--- a/resources/css/filament-tutorials.css
+++ b/resources/css/filament-tutorials.css
@@ -83,6 +83,18 @@
   background: rgb(249 250 251);
 }
 
+.filament-tutorials-skip-btn {
+  background: transparent;
+  border-color: transparent;
+  color: rgb(75 85 99);
+}
+
+.filament-tutorials-skip-btn:hover {
+  background: rgb(243 244 246);
+  border-color: transparent;
+  color: rgb(17 24 39);
+}
+
 .driver-popover button:focus-visible {
   outline: 2px solid rgb(245 158 11);
   outline-offset: 2px;
@@ -112,4 +124,15 @@
 
 .dark .driver-popover-prev-btn:hover {
   background: rgb(63 63 70);
+}
+
+.dark .filament-tutorials-skip-btn {
+  background: transparent;
+  border-color: transparent;
+  color: rgb(161 161 170);
+}
+
+.dark .filament-tutorials-skip-btn:hover {
+  background: rgb(39 39 42);
+  color: rgb(244 244 245);
 }
